@@ -1,4 +1,4 @@
 #PDF-BANNER
-Template default.pdf
+Template secret.pdf
 Show printer-name printer-info printer-location printer-make-and-model printer-driver-name printer-driver-version paper-size imageable-area job-id options time-at-creation time-at-processing
 
